2010-06-13  Karl Berry  <karl@tug.org>

	* dvips.texi: update for 2010.

2010-06-04  Karl Berry  <karl@tug.org>

	* afm2tfm.c (version),
	* dvips.h (BANNER): 5.99 for TeX Live 2010 (pretest 2, maybe final).

2010-05-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* config.ps: include cid-base.map.

2010-05-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* search.c: quote command in W32 case to allow path name
	with spaces.

2010-05-18  Karl Berry  <karl@tug.org>

	* config.h (type1path): rename from type1.
	* writet1.c (t1_open): use type1path, not headerpath.

	* configure.ac (AC_INIT),
	* afm2tfm.c: (version),
	* dvips.c (main), 
	* dvips.h (BANNER): 5.99/pretest, 2010.

2010-05-14  Karl Berry  <karl@tug.org>

	* resident.c,
	* output.c: more sprintf -> snprintf.

2010-05-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvips.h [SET_BINARY]: Add cast to void.
	* afm2tfm.c, finclude.c, output.c, search.c (SET_BINARY): Once
	again remove casts to void.

2010-05-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* all files: Remove more useless casts to void.

	* afm2tfm.c, finclude.c, output.c, search.c: Reintroduce a few
	casts to void, to avoid warnings (statement has no effect).

2010-05-10  Karl Berry  <karl@tug.org>

	* drawPS.c,
	* flib.c,
	* finclude.c,
	* afm2tfm.c,
	* hps.c,
	* emspecial.c,
	* dospecial.c: more snprintf.

	* all files: remove useless casts to void.

	* dosection.c (dosection),
	* dospecial.c (dospecial): use snprintf, just in case.

2010-05-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* output.c: correct wrong boundary values of characters.
	(from Takuji Tanaka <KXD02663@nifty.ne.jp>.)
	* protos.h, dvips.c, output.c, resident.c: remove unnecessary SJIS option.
	(from Takuji Tanaka <KXD02663@nifty.ne.jp>.)
	(a commit r18123 seemes to be eliminated, so try again)

2010-05-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dosection.c (dosection): Add newline before "@start".
	* testdata/*.pro, testdata/*.xps: Updated.
